--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -28,7 +28,7 @@ variables:
   azureAppServiceName: 'savethecat-prod-api-001'
   
   # Nombre de la Conexión de Servicio (la crearemos/autorizaremos en el siguiente paso)
-  azureSubscription: 'savethecat-sc' 
+  azureSubscription: 'savethecat-prod-sc' 
 
 # Fases del Pipeline
 stages:
