--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -1,25 +1,28 @@
+# azure-pipelines-frontend.yml
 trigger:
   branches:
     include:
       - main
   paths:
     include:
-      - simonholmquist/savethecat/SaveTheCat-dc704d3aa211fc901c211a433a3434a787c7aaa1/SaveTheCat.Frontend/*
+      - '**/SaveTheCat.Frontend/**' # Solo se ejecuta si cambias el front
 
 variables:
-  azureSubscription: 'AzureConnection'
-  staticWebAppName: 'savethecat-prod-web-001'
-  # Ruta relativa a la raíz del repo
+  # Ruta ajustada a tu carpeta
   appLocation: 'simonholmquist/savethecat/SaveTheCat-dc704d3aa211fc901c211a433a3434a787c7aaa1/SaveTheCat.Frontend'
-  outputLocation: 'dist' # Vite por defecto compila a 'dist'
+  outputLocation: 'dist'
 
 pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+- checkout: self
+  submodules: true
+
 - task: AzureStaticWebApp@0
-  displayName: 'Build and Deploy Static Web App'
+  displayName: 'Build and Deploy Frontend'
   inputs:
     app_location: '$(appLocation)'
     output_location: '$(outputLocation)'
-    azure_static_web_apps_api_token: $(deployment_token) # Ver nota abajo
+    # El token se debe configurar en las variables del pipeline (ver abajo)
+    azure_static_web_apps_api_token: $(deployment_token)
