--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -8,76 +8,77 @@ trigger:
       - '**/SaveTheCat.Backend/**' # Solo se ejecuta si cambias el backend
 
 variables:
-  # Rutas basadas en tu estructura de carpetas subida
-  backendRoot: 'simonholmquist/savethecat/SaveTheCat.Backend'
   buildConfiguration: 'Release'
-  azureSubscription: 'savethecat-prod-sc' # NOMBRE DE TU SERVICE CONNECTION
+  backendProjectPath: '**/SaveTheCat.Api.csproj'
+  azureSubscription: 'AzureConnection' # El nombre que pusiste en Fase 1
   webAppName: 'savethecat-prod-api-001'
 
 pool:
   vmImage: 'windows-latest'
 
 steps:
-# 1. Instalar herramienta para migraciones (Entity Framework)
+# 1. Instalar herramienta para Migraciones de EF Core
 - task: DotNetCoreCLI@2
-  displayName: 'Install EF Core Tool'
+  displayName: 'Install EF Core Global Tool'
   inputs:
     command: custom
     custom: tool
     arguments: 'install --global dotnet-ef'
 
-# 2. Restaurar paquetes
+# 2. Restaurar dependencias
 - task: DotNetCoreCLI@2
-  displayName: 'Restore Packages'
+  displayName: 'Restore Nuget Packages'
   inputs:
     command: 'restore'
-    projects: '$(backendRoot)/SaveTheCat.Api/SaveTheCat.Api.csproj'
+    projects: '$(backendProjectPath)'
 
-# 3. Compilar
+# 3. Compilar el proyecto
 - task: DotNetCoreCLI@2
-  displayName: 'Build'
+  displayName: 'Build Backend'
   inputs:
     command: 'build'
-    projects: '$(backendRoot)/SaveTheCat.Api/SaveTheCat.Api.csproj'
+    projects: '$(backendProjectPath)'
     arguments: '--configuration $(buildConfiguration) --no-restore'
 
-# 4. Generar bundle de migraciones (crea un .exe para actualizar la DB)
+# 4. Generar Bundle de Migraciones (Para actualizar la DB automáticamente)
 - task: CmdLine@2
-  displayName: 'Build Migration Bundle'
+  displayName: 'Build EF Core Migrations Bundle'
   inputs:
     script: |
-      cd $(backendRoot)/SaveTheCat.Api
+      cd simonholmquist/savethecat/SaveTheCat/SaveTheCat.Backend/SaveTheCat.Api
       dotnet ef migrations bundle --self-contained -r win-x64 -o $(Build.ArtifactStagingDirectory)/efbundle.exe
-
-# 5. Publicar API (Zip)
+      
+# 5. Publicar la API (Generar el .zip)
 - task: DotNetCoreCLI@2
   displayName: 'Publish API'
   inputs:
     command: 'publish'
-    projects: '$(backendRoot)/SaveTheCat.Api/SaveTheCat.Api.csproj'
-    publishWebProjects: false
-    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/drop --runtime win-x64 --self-contained false'
+    projects: '$(backendProjectPath)'
+    publishWebProjects: true
+    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/drop'
     zipAfterPublish: true
 
-# 6. Desplegar al App Service
+# 6. Desplegar al App Service (API)
 - task: AzureWebApp@1
-  displayName: 'Deploy API to Azure'
+  displayName: 'Deploy to Azure App Service'
   inputs:
     azureSubscription: '$(azureSubscription)'
     appType: 'webApp'
     appName: '$(webAppName)'
     package: '$(Build.ArtifactStagingDirectory)/drop/*.zip'
 
-# 7. Ejecutar Migraciones en SQL Database
+# 7. Ejecutar Migraciones en Base de Datos (SQL Database)
+# NOTA: Asegúrate de que el App Service o el Agente tenga acceso a la DB.
+# Una forma más segura es usar las credenciales desde KeyVault o Variables de Pipeline.
 - task: AzureCLI@2
-  displayName: 'Update Database Schema'
+  displayName: 'Apply Database Migrations'
   inputs:
     azureSubscription: '$(azureSubscription)'
     scriptType: 'pscore'
     scriptLocation: 'inlineScript'
     inlineScript: |
-      # Obtiene la connection string configurada en el App Service en Azure
+      # Obtener Connection String desde el App Service (Configuración)
       $conn = az webapp config connection-string list --resource-group savethecat-prod-rg --name $(webAppName) --query "[?name=='DefaultConnection'].value" -o tsv
       
-      # Ejecuta el actualizador de base de datos
+      # Ejecutar el bundle contra la base de datos
       & "$(Build.ArtifactStagingDirectory)/efbundle.exe" --connection "$conn"
