--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -10,7 +10,7 @@ trigger:
 variables:
   buildConfiguration: 'Release'
   backendProjectPath: '**/SaveTheCat.Api.csproj'
-  azureSubscription: 'AzureConnection' # El nombre que pusiste en Fase 1
+  azureSubscription: 'savethecat-prod-sc' # El nombre que pusiste en Fase 1
   webAppName: 'savethecat-prod-api-001'
 
 pool:
