--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -17,13 +17,14 @@ pool:
   vmImage: 'windows-latest'
 
 steps:
-# 1. Instalar herramienta para Migraciones de EF Core
+# 1. Restaurar herramientas locales de .NET (incluye dotnet-ef)
 - task: DotNetCoreCLI@2
-  displayName: 'Install EF Core Global Tool'
+  displayName: 'Restore .NET Tools'
   inputs:
     command: custom
     custom: tool
-    arguments: 'install --global dotnet-ef'
+    arguments: 'restore'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/SaveTheCat.Backend'
 
 # 2. Restaurar dependencias
 - task: DotNetCoreCLI@2
@@ -45,7 +46,7 @@ steps:
   displayName: 'Build EF Core Migrations Bundle'
   inputs:
     script: |
-      cd simonholmquist/savethecat/SaveTheCat/SaveTheCat.Backend/SaveTheCat.Api
+      cd $(System.DefaultWorkingDirectory)/SaveTheCat.Backend/SaveTheCat.Api
       dotnet ef migrations bundle --self-contained -r win-x64 -o $(Build.ArtifactStagingDirectory)/efbundle.exe
       
 # 5. Publicar la API (Generar el .zip)
