--- a/SaveTheCat.Backend/SaveTheCat.Api/appsettings.json
+++ b/SaveTheCat.Backend/SaveTheCat.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SaveTheCat;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": ""
   }
 }
