--- a/SaveTheCat.Backend/SaveTheCat.Infrastructure/SaveTheCat.Infrastructure.csproj
+++ b/SaveTheCat.Backend/SaveTheCat.Infrastructure/SaveTheCat.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Communication.Email" Version="1.1.0" />
     <PackageReference Include="MailKit" Version="4.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.22" />
