Update CORS, API URL, and pipeline configuration
Updated CORS policy in `Program.cs` to dynamically fetch the frontend URL from configuration, supporting multiple origins for different environments. Replaced hardcoded `API_BASE_URL` in `apiClient.ts` with an environment variable (`VITE_API_URL`) and removed JWT token interceptor logic.

Added `VITE_API_URL` to the `env` section in `azure-pipelines-frontend.yml` to ensure the correct API URL is used during production builds. These changes improve flexibility and adaptability across environments.

--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -26,3 +26,5 @@ steps:
     output_location: '$(outputLocation)'
     # El token se debe configurar en las variables del pipeline (ver abajo)
     azure_static_web_apps_api_token: $(deployment_token)
+  env: # <--- AGREGA ESTA SECCIÓN
+    VITE_API_URL: 'https://savethecat-prod-api-001.azurewebsites.net/api'
