Add MediatR, refactor CORS, and update pipeline config
Introduced MediatR services in `Program.cs` for improved request
handling, including validators and a validation pipeline behavior.

Refactored the CORS policy to dynamically use the client app URL
from configuration (`EmailSettings:ClientAppUrl`) and added
`AllowCredentials` for better support of cookies/auth tokens.

Updated the middleware to apply the new `AllowClientApp` policy
and removed the old `AllowReactApp` policy.

Modified the Azure pipeline configuration to update the
`VITE_API_URL` environment variable to point to the correct API
endpoint.

Added minor cleanup and comments to improve code clarity and
maintainability.

--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -27,4 +27,4 @@ steps:
     # El token se debe configurar en las variables del pipeline (ver abajo)
     azure_static_web_apps_api_token: $(deployment_token)
   env: # <--- AGREGA ESTA SECCIÓN
-    VITE_API_URL: 'https://savethecat-prod-api-001.azurewebsites.net/api'
+    VITE_API_URL: 'savethecat-prod-api-001-f3b8c0ehbsckashy.brazilsouth-01.azurewebsites.net'
