Fix DesignTimeDbContextFactory build issue
Added an `env` block to the "Build EF Core Migrations Bundle" step in the Azure Pipelines configuration. Defined a `DefaultConnection` environment variable with a placeholder connection string to prevent `DesignTimeDbContextFactory` from failing during compilation. This change does not affect database connectivity and is only relevant for the build process.

--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -48,7 +48,11 @@ steps:
     script: |
       cd $(System.DefaultWorkingDirectory)/SaveTheCat.Backend/SaveTheCat.Api
       dotnet ef migrations bundle --self-contained -r win-x64 -o $(Build.ArtifactStagingDirectory)/efbundle.exe
-      
+    env:
+      # Esta variable es SOLO para que el DesignTimeDbContextFactory no falle al compilar.
+      # El valor no importa porque no se conecta a la DB en este paso.
+      DefaultConnection: "Server=(localdb)\\mssqllocaldb;Database=TempDb;Trusted_Connection=True;"
+
 # 5. Publicar la API (Generar el .zip)
 - task: DotNetCoreCLI@2
   displayName: 'Publish API'
