--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -49,7 +49,7 @@ steps:
       cd $(System.DefaultWorkingDirectory)/SaveTheCat.Backend/SaveTheCat.Api
       dotnet ef migrations bundle --self-contained -r win-x64 -o $(Build.ArtifactStagingDirectory)/efbundle.exe
     env:
-      DefaultConnection: 'Server=(localdb)\\mssqllocaldb;Database=TempDb;Trusted_Connection=True;'
+      defaultConnection: Server=(localdb)\\mssqllocaldb;Database=TempDb;Trusted_Connection=True;
 
 # 5. Publicar la API (Generar el .zip)
 - task: DotNetCoreCLI@2
