--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -48,8 +48,8 @@ steps:
     script: |
       cd $(System.DefaultWorkingDirectory)/SaveTheCat.Backend/SaveTheCat.Api
       dotnet ef migrations bundle --self-contained -r win-x64 -o $(Build.ArtifactStagingDirectory)/efbundle.exe
-    env:
-      defaultConnection: Server=(localdb)\\mssqllocaldb;Database=TempDb;Trusted_Connection=True;
+  env:
+    DefaultConnection: 'Server=(localdb)\\mssqllocaldb;Database=TempDb;Trusted_Connection=True;'
 
 # 5. Publicar la API (Generar el .zip)
 - task: DotNetCoreCLI@2
