--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -47,9 +47,11 @@ steps:
   inputs:
     script: |
       cd $(System.DefaultWorkingDirectory)/SaveTheCat.Backend/SaveTheCat.Api
+      
+      REM Establecer la variable directamente en la sesión de CMD
+      set "DefaultConnection=Server=(localdb)\mssqllocaldb;Database=TempDb;Trusted_Connection=True;"
+      
       dotnet ef migrations bundle --self-contained -r win-x64 -o $(Build.ArtifactStagingDirectory)/efbundle.exe
-  env:
-    DefaultConnection: 'Server=(localdb)\\mssqllocaldb;Database=TempDb;Trusted_Connection=True;'
 
 # 5. Publicar la API (Generar el .zip)
 - task: DotNetCoreCLI@2
