--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -44,14 +44,13 @@ steps:
 # 4. Generar Bundle de Migraciones (Para actualizar la DB automáticamente)
 - task: CmdLine@2
   displayName: 'Build EF Core Migrations Bundle'
+  env:
+    ASPNETCORE_ENVIRONMENT: 'Production'
+    ConnectionStrings__DefaultConnection: 'Server=.;Database=SaveTheCatDev;Trusted_Connection=True;TrustServerCertificate=True;'
   inputs:
     script: |
       cd $(System.DefaultWorkingDirectory)/SaveTheCat.Backend/SaveTheCat.Api
-      
-      REM Establecer la variable directamente en la sesión de CMD
-      set "DefaultConnection=Server=(localdb)\mssqllocaldb;Database=TempDb;Trusted_Connection=True;"
-      
-      dotnet ef migrations bundle --self-contained -r win-x64 -o $(Build.ArtifactStagingDirectory)/efbundle.exe
+      dotnet ef migrations bundle --self-contained -r win-x64 -o $(Build.ArtifactStagingDirectory)/efbundle.exe --verbose
 
 # 5. Publicar la API (Generar el .zip)
 - task: DotNetCoreCLI@2
