Update EF Core migrations task connection string
Updated the `ConnectionStrings__DefaultConnection` in the Azure Pipelines YAML file to use a LocalDB instance instead of a production-like SQL Server instance. This change simplifies configuration for local development and CI/CD environments.

--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -46,7 +46,7 @@ steps:
   displayName: 'Build EF Core Migrations Bundle'
   env:
     ASPNETCORE_ENVIRONMENT: 'Production'
-    ConnectionStrings__DefaultConnection: 'Server=.;Database=SaveTheCatDev;Trusted_Connection=True;TrustServerCertificate=True;'
+    ConnectionStrings__DefaultConnection: 'Server=(localdb)\\mssqllocaldb;Database=SaveTheCatDb;Trusted_Connection=True;MultipleActiveResultSets=true'
   inputs:
     script: |
       cd $(System.DefaultWorkingDirectory)/SaveTheCat.Backend/SaveTheCat.Api
