Add EmailSettings__ClientAppUrl to pipeline config
Added a new environment variable `EmailSettings__ClientAppUrl` to the
`CmdLine@2` task in `azure-pipelines-backend.yml`. This variable is
set to `'https://gentle-dune-0f71d0e0f.3.azurestaticapps.net'` and
provides the client application URL, likely for email-related
functionality or other integrations during the build process.

--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -47,6 +47,7 @@ steps:
   env:
     ASPNETCORE_ENVIRONMENT: 'Production'
     ConnectionStrings__DefaultConnection: 'Server=(localdb)\\mssqllocaldb;Database=SaveTheCatDb;Trusted_Connection=True;MultipleActiveResultSets=true'
+    EmailSettings__ClientAppUrl: 'https://gentle-dune-0f71d0e0f.3.azurestaticapps.net'
   inputs:
     script: |
       cd $(System.DefaultWorkingDirectory)/SaveTheCat.Backend/SaveTheCat.Api
