--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -20,13 +20,25 @@ steps:
 - checkout: self
   submodules: true
 
+- task: NodeTool@0
+  displayName: 'Use Node.js 20'
+  inputs:
+    versionSpec: '20.x'
+
+- script: npm ci
+  displayName: 'Install frontend dependencies'
+  workingDirectory: '$(appLocation)'
+
+- script: npm run build
+  displayName: 'Build frontend'
+  workingDirectory: '$(appLocation)'
+  env:
+    VITE_API_URL: $(viteApiUrl)
+
 - task: AzureStaticWebApp@0
   displayName: 'Deploy to Static Web App'
   inputs:
-    app_location: '$(appLocation)'
+    app_location: '$(appLocation)/$(outputLocation)' # Desplegamos la carpeta ya construida
     api_location: '' # Dejamos vacío porque tu API es una Web App separada, no una Azure Function gestionada
-    output_location: '$(outputLocation)'
-    azure_static_web_apps_api_token: $(AZURE_STATIC_WEB_APP_API_TOKEN_PROD)
-  env:
-    # Inyectamos la variable de entorno para que Vite la tome durante el build
-    VITE_API_URL: $(viteApiUrl)
+    skip_app_build: true # Ya realizamos el build manualmente
+  azure_static_web_apps_api_token: $(AZURE_STATIC_WEB_APP_API_TOKEN_PROD)
