--- a/SaveTheCat.Backend/SaveTheCat.Api/appsettings.json
+++ b/SaveTheCat.Backend/SaveTheCat.Api/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": ""
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:3000",
+      "https://gentle-dune-0f71d0e0f.3.azurestaticapps.net"
+    ]
   }
 }
