Add JWT configuration validation and defaults

--- a/SaveTheCat.Backend/SaveTheCat.Api/appsettings.json
+++ b/SaveTheCat.Backend/SaveTheCat.Api/appsettings.json
@@ -14,5 +14,10 @@
       "http://localhost:3000",
       "https://gentle-dune-0f71d0e0f.3.azurestaticapps.net"
     ]
+  },
+  "Jwt": {
+    "Key": "ChangeThisDevelopmentKey123!",
+    "Issuer": "SaveTheCat",
+    "Audience": "SaveTheCat"
   }
 }
